--- a/app/assets/stylesheets/global/global.css.scss
+++ b/app/assets/stylesheets/global/global.css.scss
@@ -26,3 +26,23 @@ a {
 	color: $black;
 	text-decoration: none;
 }
+.close {
+	float: right;
+	font-size: 20px;
+	font-weight: bold;
+	line-height: 18px;
+	color: #000000;
+	text-shadow: 0 1px 0 #ffffff;
+	opacity: 0.2;
+	filter: alpha(opacity=20);
+	&:hover {
+		color: #000000;
+		text-decoration: none;
+		opacity: 0.4;
+		filter: alpha(opacity=40);
+		cursor: pointer;
+	}
+}
+.clearfix {
+	clear: both;
+}
