--- a/app/views/layouts/_notice.html.haml
+++ b/app/views/layouts/_notice.html.haml
@@ -1,2 +1,5 @@
-#notice{ :class => type }
-	= notice
+#notice
+	%div{ :class => "alert alert-#{type}" }
+		%a{ :class => "close", "data-dismiss" => "alert", :href => "#" }
+			&times;
+		= notice
