Fixed header write button

--- a/app/assets/stylesheets/global/header.css.scss
+++ b/app/assets/stylesheets/global/header.css.scss
@@ -58,7 +58,7 @@ header {
 				padding: 6px;
 				background-color: $red_shade;
 				@include border_radius(10px);
-				background-image: url('../write.svg');
+				background-image: url('/assets/write.svg');
 				background-size: 26px;
 				background-repeat: no-repeat;
 				background-position: center center;
