Added accessibility and CSS styling.

--- a/app/assets/stylesheets/global/global.css.scss
+++ b/app/assets/stylesheets/global/global.css.scss
@@ -43,6 +43,13 @@ a {
 		cursor: pointer;
 	}
 }
+::selection {
+	background: $green;
+}
+::-moz-selection {
+	background: $blue;
+}
+
 .clearfix {
 	clear: both;
 }
