--- a/app/assets/stylesheets/global/section.css.scss
+++ b/app/assets/stylesheets/global/section.css.scss
@@ -3,7 +3,7 @@
 
 
 section {
-	height: 100%;
+	// height: 100%;
 	#carousel-excuses {
 		height: 100%;
 		.carousel-previous-button, .carousel-forward-button {
