--- a/app/views/pages/_robert.html.erb
+++ b/app/views/pages/_robert.html.erb
@@ -71,7 +71,7 @@
 					<h3>Favorite</h3>
 					<form accept-charset="UTF-8" action="/favorites" data-remote="true" method="post"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"><input name="authenticity_token" type="hidden" value="khk8KVQxySsAg+H/ZokKUWPqFhwimUPjc7toVLknDBg="></div>
 						<input id="excuse" name="excuse" type="hidden" value="18">
-						<img alt="" class="btn-favorite" src="/assets/heart_black-49e2679841ddaa2e64092b68f71696c4.svg">
+						<img alt="" class="btn-favorite true" src="/assets/heart_red.svg">
 					</form>
 
 				</div>
@@ -93,7 +93,35 @@
 		</div>
 		<div class="item">
 			<h2>
-				Yeah I got ideas.
+				<strong>Warning!</strong> That feature has been deprecated.
+			</h2>
+			<div class="details">
+				<div class="favorite">
+					<h3>Favorite</h3>
+					<form accept-charset="UTF-8" action="/favorites" data-remote="true" method="post"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"><input name="authenticity_token" type="hidden" value="khk8KVQxySsAg+H/ZokKUWPqFhwimUPjc7toVLknDBg="></div>
+						<input id="excuse" name="excuse" type="hidden" value="18">
+						<img alt="" class="btn-favorite true" src="/assets/heart_red.svg">
+					</form>
+				</div>
+				<div class="location">
+					<h3>Location</h3>
+					<ul>
+						<li><a href="/location/chicago">Chicago</a></li>
+					</ul>
+				</div>
+				<div class="tags">
+					<h3>Tags</h3>
+					<ul>
+						<li class="tag"><a href="/tag/start_form_tag" rel="tag">start_form_tag</a></li>
+						<li class="tag"><a href="/tag/stuff" rel="tag">...stuff...</a></li>
+						<li class="tag"><a href="/tag/end_form_tag" rel="tag">end_form_tag</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<div class="item">
+			<h2>
+				Yeah, I got ideas.
 			</h2>
 			<div class="details">
 				<div class="favorite">
@@ -114,7 +142,8 @@
 					<h3>Tags</h3>
 					<ul>
 						<li class="tag"><a href="/tag/Twitter" rel="tag">Twitter</a></li>
-						<li class="tag"><a href="/tag/Branding" rel="tag">Branding</a></li>
+						<li class="tag"><a href="/tag/Built in Chicago" rel="tag">Built in Chicago</a></li>
+						<li class="tag"><a href="/tag/gtrot" rel="tag">gtrot</a></li>
 						<li class="tag"><a href="/tag/Social Media" rel="tag">Social Media</a></li>
 						<li class="tag"><a href="/tag/Code Academy" rel="tag">Code Academy</a></li>
 					</ul>
@@ -152,71 +181,14 @@
 		</div>
 		<div class="item">
 			<h2>
-				This ain&apos;t no community college.
+				Sorry, been working on <em>santa</em> this afternoon.
 			</h2>
 			<div class="details">
 				<div class="favorite">
 					<h3>Favorite</h3>
 					<form accept-charset="UTF-8" action="/favorites" data-remote="true" method="post"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"><input name="authenticity_token" type="hidden" value="khk8KVQxySsAg+H/ZokKUWPqFhwimUPjc7toVLknDBg="></div>
 						<input id="excuse" name="excuse" type="hidden" value="20">
-						<img alt="" class="btn-favorite" src="/assets/heart_black-49e2679841ddaa2e64092b68f71696c4.svg">
-					</form>
-				</div>
-				<div class="location">
-					<h3>Location</h3>
-					<ul>
-						<li><a href="/location/chicago">Chicago</a></li>
-					</ul>
-				</div>
-				<div class="tags">
-					<h3>Tags</h3>
-					<ul>
-						<li class="tag"><a href="/tag/Community" rel="tag">Community</a></li>
-						<li class="tag"><a href="/tag/Vision" rel="tag">Vision</a></li>
-						<li class="tag"><a href="/tag/Goals" rel="tag">Goals</a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-		<div class="item">
-			<h2>
-				No <em>pressure.</em> 
-			</h2>
-			<div class="details">
-				<div class="favorite">
-					<h3>Favorite</h3>
-					<form accept-charset="UTF-8" action="/favorites" data-remote="true" method="post"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"><input name="authenticity_token" type="hidden" value="khk8KVQxySsAg+H/ZokKUWPqFhwimUPjc7toVLknDBg="></div>
-						<input id="excuse" name="excuse" type="hidden" value="20">
-						<img alt="" class="btn-favorite" src="/assets/heart_black-49e2679841ddaa2e64092b68f71696c4.svg">
-					</form>
-
-				</div>
-				<div class="location">
-					<h3>Location</h3>
-					<ul>
-						<li><a href="/location/chicago">Chicago</a></li>
-					</ul>
-				</div>
-				<div class="tags">
-					<h3>Tags</h3>
-					<ul>
-						<li class="tag"><a href="/tag/Community" rel="tag">Community</a></li>
-						<li class="tag"><a href="/tag/Vision" rel="tag">Vision</a></li>
-						<li class="tag"><a href="/tag/Goals" rel="tag">Goals</a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-		<div class="item">
-			<h2>
-				Sorry been working on santa this afternoon.
-			</h2>
-			<div class="details">
-				<div class="favorite">
-					<h3>Favorite</h3>
-					<form accept-charset="UTF-8" action="/favorites" data-remote="true" method="post"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"><input name="authenticity_token" type="hidden" value="khk8KVQxySsAg+H/ZokKUWPqFhwimUPjc7toVLknDBg="></div>
-						<input id="excuse" name="excuse" type="hidden" value="20">
-						<img alt="" class="btn-favorite" src="/assets/heart_black-49e2679841ddaa2e64092b68f71696c4.svg">
+						<img alt="" class="btn-favorite true" src="/assets/heart_red.svg">
 					</form>
 				</div>
 				<div class="location">
@@ -253,7 +225,6 @@
 						<input id="excuse" name="excuse" type="hidden" value="20">
 						<img alt="" class="btn-favorite" src="/assets/heart_black-49e2679841ddaa2e64092b68f71696c4.svg">
 					</form>
-
 				</div>
 				<div class="location">
 					<h3>Location</h3>
@@ -272,6 +243,96 @@
 				</div>
 			</div>
 		</div>
+		<div class="item">
+			<h2>
+				Call me whatever, just not Rob.
+			</h2>
+			<div class="details">
+				<div class="favorite">
+					<h3>Favorite</h3>
+					<form accept-charset="UTF-8" action="/favorites" data-remote="true" method="post"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"><input name="authenticity_token" type="hidden" value="khk8KVQxySsAg+H/ZokKUWPqFhwimUPjc7toVLknDBg="></div>
+						<input id="excuse" name="excuse" type="hidden" value="20">
+						<img alt="" class="btn-favorite" src="/assets/heart_black-49e2679841ddaa2e64092b68f71696c4.svg">
+					</form>
+				</div>
+				<div class="location">
+					<h3>Location</h3>
+					<ul>
+						<li><a href="/location/chicago">Chicago</a></li>
+					</ul>
+				</div>
+				<div class="tags">
+					<h3>Tags</h3>
+					<ul>
+						<li class="tag"><a href="/tag/Work" rel="tag">Work</a></li>
+						<li class="tag"><a href="/tag/Robert" rel="tag">Robert</a></li>
+						<li class="tag"><a href="/tag/Work" rel="tag">Play</a></li>
+						<li class="tag"><a href="/tag/Bob" rel="tag">Bob</a></li>
+						<li class="tag"><a href="/tag/Bob the Builder" rel="tag">Bob the Builder</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>		
+		<div class="item">
+			<h2>
+				Dev. Jr.
+			</h2>
+			<div class="details">
+				<div class="favorite">
+					<h3>Favorite</h3>
+					<form accept-charset="UTF-8" action="/favorites" data-remote="true" method="post"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"><input name="authenticity_token" type="hidden" value="khk8KVQxySsAg+H/ZokKUWPqFhwimUPjc7toVLknDBg="></div>
+						<input id="excuse" name="excuse" type="hidden" value="20">
+						<img alt="" class="btn-favorite" src="/assets/heart_black-49e2679841ddaa2e64092b68f71696c4.svg">
+					</form>
+				</div>
+				<div class="location">
+					<h3>Location</h3>
+					<ul>
+						<li><a href="/location/chicago">Chicago</a></li>
+					</ul>
+				</div>
+				<div class="tags">
+					<h3>Tags</h3>
+					<ul>
+						<li class="tag"><a href="/tag/Now Hiring" rel="tag">Now Hiring?</a></li>
+						<li class="tag"><a href="/tag/Apprenticeships" rel="tag">Apprenticeships</a></li>
+						<li class="tag"><a href="/tag/Work" rel="tag">Work</a></li>
+						<li class="tag"><a href="/tag/Mentor" rel="tag">Mentor</a></li>
+						<li class="tag"><a href="/tag/Training" rel="tag">Training</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<div class="item">
+			<h2>
+				Robert Milner | me@rbrtmlnr.com | @rbrtmlnr<br />
+				Just drop the vowels.
+			</h2>
+			<div class="details">
+				<div class="favorite">
+					<h3>Favorite</h3>
+					<form accept-charset="UTF-8" action="/favorites" data-remote="true" method="post"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"><input name="authenticity_token" type="hidden" value="khk8KVQxySsAg+H/ZokKUWPqFhwimUPjc7toVLknDBg="></div>
+						<input id="excuse" name="excuse" type="hidden" value="20">
+						<img alt="" class="btn-favorite true" src="/assets/heart_red.svg">
+					</form>
+				</div>
+				<div class="location">
+					<h3>Location</h3>
+					<ul>
+						<li><a href="/location/chicago">Chicago</a></li>
+					</ul>
+				</div>
+				<div class="tags">
+					<h3>Tags</h3>
+					<ul>
+						<li class="tag"><a href="http://twitter.com/rbrtmlnr" rel="tag">Twitter</a></li>
+						<li class="tag"><a href="http://github.com/rbrtmlnr" rel="tag">GitHub</a></li>
+						<li class="tag"><a href="http://forrst.com/people/rbrtmlnr" rel="tag">Forsst</a></li>
+						<li class="tag"><a href="http://rbrtmlnr.com" rel="tag">Website</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>	
 	</div>
 	<div class="clearfix"></div>
 	<div class="carousel-forward-button">
