Dev Jr. slide updated.

--- a/app/views/pages/_robert.html.erb
+++ b/app/views/pages/_robert.html.erb
@@ -275,7 +275,7 @@
 		</div>		
 		<div class="item">
 			<h2>
-				Dev. Jr.
+				Maybe... Dev. Jr.?
 			</h2>
 			<div class="details">
 				<div class="favorite">
@@ -297,7 +297,7 @@
 						<li class="tag"><a href="/tag/Now Hiring" rel="tag">Now Hiring?</a></li>
 						<li class="tag"><a href="/tag/Apprenticeships" rel="tag">Apprenticeships</a></li>
 						<li class="tag"><a href="/tag/Work" rel="tag">Work</a></li>
-						<li class="tag"><a href="/tag/Mentor" rel="tag">Mentor</a></li>
+						<li class="tag"><a href="/tag/Mentoring" rel="tag">Mentoring</a></li>
 						<li class="tag"><a href="/tag/Training" rel="tag">Training</a></li>
 					</ul>
 				</div>
