Updated final slide with .coms

--- a/app/views/pages/_robert.html.erb
+++ b/app/views/pages/_robert.html.erb
@@ -325,10 +325,10 @@
 				<div class="tags">
 					<h3>Tags</h3>
 					<ul>
-						<li class="tag"><a href="http://twitter.com/rbrtmlnr" rel="tag">Twitter</a></li>
-						<li class="tag"><a href="http://github.com/rbrtmlnr" rel="tag">GitHub</a></li>
-						<li class="tag"><a href="http://forrst.com/people/rbrtmlnr" rel="tag">Forsst</a></li>
-						<li class="tag"><a href="http://rbrtmlnr.com" rel="tag">Website</a></li>
+						<li class="tag"><a href="http://twitter.com/rbrtmlnr" rel="tag">Twitter.com</a></li>
+						<li class="tag"><a href="http://github.com/rbrtmlnr" rel="tag">GitHub.com</a></li>
+						<li class="tag"><a href="http://forrst.com/people/rbrtmlnr" rel="tag">Forsst.com</a></li>
+						<li class="tag"><a href="http://rbrtmlnr.com" rel="tag">rbrtmlnr.com</a></li>
 					</ul>
 				</div>
 			</div>
