Added video folder.

--- a/app/views/pages/_robert.html.erb
+++ b/app/views/pages/_robert.html.erb
@@ -211,11 +211,11 @@
 		<div class="item">
 			<div style="padding-bottom: 40px; text-align: center;">
 				<object style="height: 390px; width: 640px;">
-					<param name="movie" value="https://www.youtube.com/v/hUrEACMFLkM?version=3&feature=player_embedded&showinfo=0&vq=hd720&showsearch=0&rel=0&autohide=1&fs=1&feature=player_embedded">
+					<param name="movie" value="https://www.youtube.com/v/KW9xxuiW6_U?version=3&feature=player_embedded&showinfo=0&vq=hd720&showsearch=0&rel=0&autohide=1&fs=1&feature=player_embedded">
 					<param name="allowFullScreen" value="true">
 					<param name="window" value="wmode">
 					<param name="allowScriptAccess" value="always">
-					<embed src="https://www.youtube.com/v/hUrEACMFLkM?version=3&feature=player_embedded&showinfo=0&vq=hd720&showsearch=0&rel=0&autohide=1&fs=1&feature=player_embedded" type="application/x-shockwave-flash" allowfullscreen="true" allowScriptAccess="always" width="640" height="360">
+					<embed src="https://www.youtube.com/v/KW9xxuiW6_U?version=3&feature=player_embedded&showinfo=0&vq=hd720&showsearch=0&rel=0&autohide=1&fs=1&feature=player_embedded" type="application/x-shockwave-flash" allowfullscreen="true" allowScriptAccess="always" width="640" height="360">
 				</object>
 			</div>
 			<div class="details">
