--- a/app/views/pages/_footer.html.haml
+++ b/app/views/pages/_footer.html.haml
@@ -2,21 +2,21 @@
 
 	%ul
 		%li
-			= link_to (image_tag "/assets/home.svg"), app_excuse_url, :class => "icon", :rel => "tooltip", :title => "Home"
+			= link_to (image_tag "/assets/home.png"), app_excuse_url, :class => "icon", :rel => "tooltip", :title => "Home"
 			%span.nav_label Home
 
 		%li
-			= link_to (image_tag "/assets/search.svg"), app_search_url, :class => "icon", :rel => "tooltip", :title => "Search excuses by words"
+			= link_to (image_tag "/assets/search.png"), app_search_url, :class => "icon", :rel => "tooltip", :title => "Search excuses by words"
 			%span.nav_label Search
 
 		%li
-			= link_to (image_tag "/assets/location.svg"), app_location_url, :class => "icon", :rel => "tooltip", :title => "Search excuses by location"
+			= link_to (image_tag "/assets/location.png"), app_location_url, :class => "icon", :rel => "tooltip", :title => "Search excuses by location"
 			%span.nav_label Location
 
 		%li
-			= link_to (image_tag "/assets/tag.svg"), app_tag_url, :class => "icon", :rel => "tooltip", :title => "Search excuses by tags"
+			= link_to (image_tag "/assets/tag.png"), app_tag_url, :class => "icon", :rel => "tooltip", :title => "Search excuses by tags"
 			%span.nav_label Tag
 
 		%li
-			= link_to (image_tag "/assets/account.svg"), app_user_url, :class => "icon", :rel => "tooltip", :title => "View excuses your account"
+			= link_to (image_tag "/assets/account.png"), app_user_url, :class => "icon", :rel => "tooltip", :title => "View excuses your account"
 			%span.nav_label Account
