Home button url

--- a/app/views/pages/_footer.html.haml
+++ b/app/views/pages/_footer.html.haml
@@ -2,7 +2,7 @@
 
 	%ul
 		%li
-			= link_to (image_tag "/assets/home.png"), app_excuse_url, :class => "icon", :rel => "tooltip", :title => "Home"
+			= link_to (image_tag "/assets/home.png"), root_url, :class => "icon", :rel => "tooltip", :title => "Home"
 			%span.nav_label Home
 
 		%li
