--- a/app/views/pages/_robert.html.erb
+++ b/app/views/pages/_robert.html.erb
@@ -268,6 +268,7 @@
 						<li class="tag"><a href="/tag/Robert" rel="tag">Robert</a></li>
 						<li class="tag"><a href="/tag/Work" rel="tag">Play</a></li>
 						<li class="tag"><a href="/tag/Bob" rel="tag">Bob</a></li>
+						<li class="tag"><a href="/tag/equal" rel="tag">&#61;</a></li>
 						<li class="tag"><a href="/tag/Bob the Builder" rel="tag">Bob the Builder</a></li>
 					</ul>
 				</div>
