--- a/app/assets/stylesheets/alert.css.scss
+++ b/app/assets/stylesheets/alert.css.scss
@@ -1,5 +1,6 @@
 .alert {
-  padding: 8px 35px 8px 14px;
+  // padding: 8px 35px 8px 14px;
+  padding: 2px 35px 2px 14px;
   margin-bottom: 18px;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
   background-color: #fcf8e3;
