Forrst link updated.

--- a/app/views/pages/_robert.html.erb
+++ b/app/views/pages/_robert.html.erb
@@ -328,7 +328,7 @@
 					<ul>
 						<li class="tag"><a href="http://twitter.com/rbrtmlnr" rel="tag">Twitter.com</a></li>
 						<li class="tag"><a href="http://github.com/rbrtmlnr" rel="tag">GitHub.com</a></li>
-						<li class="tag"><a href="http://forrst.com/people/rbrtmlnr" rel="tag">Forsst.com</a></li>
+						<li class="tag"><a href="http://forrst.me/rbrtmlnr" rel="tag">Forsst.com</a></li>
 						<li class="tag"><a href="http://rbrtmlnr.com" rel="tag">rbrtmlnr.com</a></li>
 					</ul>
 				</div>
