Un-parameterized the location links so that the tags would work online with PG, temporary fix.

--- a/app/views/pages/_carousel.html.haml
+++ b/app/views/pages/_carousel.html.haml
@@ -21,7 +21,7 @@
 							.location
 								%h3 Location
 								%ul
-									%li= link_to excuse.location.name, "/location/#{excuse.location.name.parameterize}"
+									%li= link_to excuse.location.name, "/location/#{excuse.location.name}"
 							.tags
 								%h3 Tags
 								%ul
@@ -42,7 +42,7 @@
 							.location
 								%h3 Location
 								%ul
-									%li= link_to excuse.location.name, "/location/#{excuse.location.name.parameterize}"
+									%li= link_to excuse.location.name, "/location/#{excuse.location.name}"
 							.tags
 								%h3 Tags
 								%ul
