--- a/app/views/pages/_carousel.html.haml
+++ b/app/views/pages/_carousel.html.haml
@@ -52,7 +52,7 @@
 		- else
 			.item.active There's no excuse for no excuses! There's only an excuse for Oh, Excuses... Why don't you create one?
 
-	.clearfix
+	.clearfix.bottom
 
 	.carousel-forward-button
 		.carousel-forward-icon
